--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,79 @@
 html {
-    box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 a {
-    color: inherit;
-    text-decoration: none;
-}
+  color: inherit;
+  text-decoration: none; }
 
 img {
-    max-width: 100%;
-}
+  max-width: 100%; }
 
 body {
-    font-family: Arial, Verdana, sans-serif;
-    background-color: rgb(25, 169, 205);
-}
+  font-family: Arial, Verdana, sans-serif;
+  background-color: #19a9cd; }
 
 .container {
-    max-width: 1000px;
-    min-width: 320px;
-    padding: 50px 20px;
-    margin: 0 auto;
-    text-align: center;
-}
+  max-width: 1000px;
+  min-width: 320px;
+  padding: 50px 20px;
+  margin: 0 auto;
+  text-align: center; }
 
-.head{
-    margin-bottom: 50px;
-    text-align: center;
-}
+.head {
+  margin-bottom: 50px;
+  text-align: center; }
 
-.card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    min-width: 20%;
-    height: 100px;
-    background-color: blueviolet;
-    color: transparent;
-    font-size: 45px;
-    font-weight: bold;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background-color 0.15s, color 0.15s, transform 0.15s;
-}
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  min-width: 20%;
+  height: 100px;
+  background-color: blueviolet;
+  color: transparent;
+  font-size: 45px;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.15s, color 0.15s, transform 0.15s; }
 
 .card.open {
-    background-color: rgb(8, 138, 114);
-    color: rgb(19, 38, 74);
-}
+  background-color: #088a72;
+  color: #13264a; }
 
 .card.success {
-    background-color: rgb(1, 166, 12);
-    color: white;
-    transform: scale(0.95);
-}
-
+  background-color: #01a60c;
+  color: white;
+  transform: scale(0.95); }
 
 .game {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    max-width: 400px;
-    max-height: 1000px;
-    margin-bottom: 40px;
-    margin: 0 auto;
-}
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+  max-height: 1000px;
+  margin-bottom: 40px;
+  margin: 0 auto; }
 
-#inp{
-    max-width: 100%;
-    margin-right: auto;
-    width: 380px;
-}
+#inp {
+  max-width: 100%;
+  margin-right: auto;
+  width: 380px; }
 
-.again{
-    margin-bottom: 40px;
-}
+.again {
+  margin-bottom: 40px; }
 
 #timer {
-    height: 50px;
-    color: black;
-    font-size: 40px;
-}
+  height: 50px;
+  color: black;
+  font-size: 40px; }
 
+/*# sourceMappingURL=style.css.map */
