--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -76,9 +76,11 @@ body {
 }
 
 #inp{
+    padding: 20px 5px;
     max-width: 100%;
+    border-radius: 15px;
     margin-right: auto;
-    width: 380px;
+    width: 80%;
 }
 
 .again{
