--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,28 @@ img {
 
 body {
   font-family: Arial, Verdana, sans-serif;
-  background-color: #19a9cd; }
+  background: linear-gradient(178.73deg, rgba(39, 135, 245, 0.18) 0%, rgba(163, 147, 245, 0.18) 100%), linear-gradient(180deg, #000000 0%, rgba(39, 36, 36, 0.7) 100%);
+  /* background-color: #19a9cd;  */
+}
 
 .container {
-  max-width: 1000px;
+  max-width: 900px;
   min-width: 320px;
   padding: 50px 20px;
   margin: 0 auto;
   text-align: center; }
 
+.block__input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 .head {
-  margin-bottom: 50px;
-  text-align: center; }
+  color: #fff;
+  text-align: center; 
+}
 
 .card {
   display: flex;
@@ -58,22 +68,65 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-width: 400px;
+  max-width: 100%;
   max-height: 1000px;
   margin-bottom: 40px;
-  margin: 0 auto; }
+  margin: 0 auto; 
+  padding: 20px 0;
+}
 
 #inp {
-  max-width: 100%;
-  margin-right: auto;
-  width: 380px; }
+  padding: 20px 5px;
+    max-width: 100%;
+    border-radius: 15px;
+    width: 80%;
+    color: #FFF;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  background-color: #17aacd;
+  outline: none;
+}
+#inp::placeholder{
+  color: #fff; 
+  opacity: 1;
+}
+#inp:focus{
+  border: 3px solid #fff;
+}
 
 .again {
-  margin-bottom: 40px; }
+  margin-bottom: 40px; 
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #FFF;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  background-color: #17aacd;
+}
 
 #timer {
   height: 50px;
-  color: black;
-  font-size: 40px; }
+  color: #fff;
+  font-size: 40px; 
+  font-weight: bold;
+}
 
+.button {
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #FFF;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  background-color: #17aacd;
+}
+.none{
+  display: none;
+}
+@media (max-width:500px){
+  #inp {
+    font-size: 8px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
